# sp24-baremetal-ide

./: .gitignore  CMakeLists.txt  CmodA7Harness.bit  GeorgeFPGAHarness.bit  Makefile  README.md  fpga.cfg  get_tsi_mem.py  output.pgm  output.txt  output_test.txt  quartus.log.save  quartus.rec  quartus.rec.save  script.py  serial_image.py  shmoo_env.yml  works.bit
app/include/: controller.h  conv_utils.h  fft_data.h  float16.c  home.h  joints.h  main.h  switch.h  uart_tsi.h
app/src/: controller.c  dataset2.h  home.c  joints.c  main.c  mvp.c  not_main.c  switch.c  test_image.h  uart_tsi.c
app2/src/: main.c  vec-igemm.S
bearlyvision/: CMakeLists.txt
bearlyvision/include/: bearlyconv.h  image_data.h  main.h
bearlyvision/src/: bearlyconv_lib.c  int16_to_int8.py  jpg_to_int8.py  main.c  output_image_int16.txt  output_image_int8.txt  serial_to_file.py
benchmarks/: Makefile  dhrystone.riscv  mt-matmul.riscv  mt-vvadd.riscv.dump  multiply.riscv.dump  pmp.riscv  qsort.riscv  rsort.riscv  rsort.riscv.dump  spmv.riscv.dump  vec-daxpy.riscv  vec-iconv2d.riscv  vec-igemm8.riscv.dump  vec-memcpy.riscv.dump  vec-sgemm.riscv  vvadd.riscv.dump
benchmarks/common/: util.h
benchmarks/vec-igemm/: vec-igemm_main.c
benchmarks/vec-igemm8/: dataset1.h  vec-igemm.S  vec-igemm_main.c
benchmarks/vec-sgemm/: vec-sgemm_main.c
benchmarks/vec-strcmp/: vec-strcmp_main.c
benchmarks_ref/: dhrystone.riscv.dump  median.riscv  median.riscv.dump  memcpy.riscv  memcpy.riscv.dump  mm.riscv  mm.riscv.dump  mt-matmul.riscv.dump  mt-memcpy.riscv  mt-memcpy.riscv.dump  mt-vvadd.riscv  multiply.riscv  pmp.riscv.dump  qsort.riscv.dump  spmv.riscv  towers.riscv  towers.riscv.dump  vec-daxpy.riscv.dump  vec-igemm.riscv  vec-igemm.riscv.dump  vec-igemm8.riscv  vec-memcpy.riscv  vec-sgemm.riscv.dump  vec-strcmp.riscv  vec-strcmp.riscv.dump  vvadd.riscv
benchmarks_ref/vec-iconv2d/: data.S  vec-iconv2d_main.c
benchmarks_ref/vec-igemm/: vec-igemm_main.c
borai/: CMakeLists.txt  README.md
borai/fp32/include/: hardware.h
borai/fp32/src/: main.c
borai/int8/include/: hardware.h  main.h
borai/int8/src/: main.c
borai/scripts/: bin2array.py
borai/src/: main.c
borai_block_tests/: CMakeLists.txt  README.md
borai_block_tests/dma_mac/: results.txt
borai_block_tests/dma_mac/include/: main.h
borai_block_tests/dma_mac/src/: main copy.c  main.c
borai_block_tests/pll/: results_500MHz.txt  results_550MHz.txt  results_600MHz.txt  results_650MHz.txt  results_700MHz.txt  results_750MHz.txt
borai_block_tests/pll/include/: main.h
borai_block_tests/pll/src/: main.c
borai_block_tests/qtdp/: results.txt
borai_block_tests/qtdp/include/: main.h
borai_block_tests/qtdp/src/: main.c
boraiq/: README.md
boraiq/include/: hardware.h
driver/intel/pll/: pll.h
driver/rocket-chip-blocks/i2c/: i2c.c  i2c.h
driver/rocket-chip-blocks/pwm/: CMakeLists.txt
dsp-saturn/common/: crt.S  syscalls.c  util.h
dsp-saturn/src/: CMakeLists.txt  dataset1.h  fft1d_main.c  fft2_gendata.py  fft2_main.c
glossy/: glossy.ld
glossy/src/sys/: time.c
include/: convolution-api.h
lab/d01/: main.c
lab/d02/src/: main.c
lab/d03/src/: main.c
lib/pthread/: Makefile  pthread.c  pthread.h
main/: CMakeLists.txt
main/conv/: CMakeLists.txt
main/conv/src/: mnist.c
mlnetworks/: CMakeLists.txt
mlnetworks/include/: cnn.h  conv_accel.h
mlnetworks/src/: bnn.c  cnn.c  conv_accel.c  rnn.c
platform/bearly24/: CMakeLists.txt  bearly24.cfg  bearly24.ld  chip_config.h  freq.h
platform/bearly24/inc/: hal_dma.h  ll_dma.h
platform/bearly24/src/: hal_dma.c
platform/bearlyml/: bearlyml.cfg
platform/dsp24/: CMakeLists.txt  chip_config.h  dsp24.cfg  dsp24.ld  freq.h
platform/labchip/: CMakeLists.txt  chip_config.h  labchip.ld
platform/shared/: ft-link.cfg
shazam_demo/include/: main.h
shazam_demo/src/: main.c  tone_samples.h  weeee.py
shmoo_bench/scpi/: output_test.txt  scpi_jupyter.ipynb  scpi_test.py
src/: Makefile  mnist.c
tests/: CMakeLists.txt  bare_conv_test.c  complete_conv_test.c  padding_test.c
(+22 files in other folders)
